# standstill

./: .dockerignore  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  README.md  SECURITY.md  detective_controls.yaml  preventive_controls.yaml  proactive_controls.yaml  pyproject.toml
.github/workflows/: release.yml  tests.yml
examples/: controls.yaml  detective_controls.yaml  preventive_controls.yaml  proactive_controls.yaml  security_services.yaml
standstill/: config.py  main.py  state.py
standstill/aws/: account_factory.py  blueprint.py  budgets.py  cloudtrail_scan.py  config_recorder.py  controltower.py  cost.py  lake.py  landing_zone.py  optimize.py  organizations.py  security_services.py  session.py  usage_type_map.py
standstill/commands/: _engine.py  accounts.py  apply.py  blueprint.py  catalog.py  check.py  config.py  cost.py  disable.py  lake.py  lz.py  operations.py  ou.py  recorder.py  security.py  view.py
standstill/data/: controls_catalog.yaml  security_services_default.yaml  securityhub_resource_types.yaml
standstill/display/: _cost.py  _security.py  renderer.py
standstill/models/: blueprint_config.py  schemas.py  security_config.py
tests/: conftest.py  test_account_management.py  test_apply_extended.py  test_blueprint.py  test_budgets_optimize.py  test_cloudtrail_scan.py  test_commands.py  test_commands_extra.py  test_config_recorder.py  test_cost_aws.py  test_cost_commands.py  test_disable.py  test_lake.py  test_landing_zone.py  test_organizations.py  test_renderer.py  test_security_config.py  test_security_services.py  test_session.py  test_standstill_config.py
